# TamerDB

./: CMakeLists.txt  README.md
cmake/: Boost.cmake  OpenGL.cmake  Project.cmake  Qt.cmake  unix.cmake  windows-mingw.cmake  windows-msvc.cmake
source/: CMakeLists.txt  acercade.cpp  acercade.h  acercade.ui  configuration.cpp  configuration.h  configuration.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myglwidget.cpp  myglwidget.h  settings.cpp  settings.h
